--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,15 @@
+# Created by .ignore support plugin (hsz.mobi)
+### Maven template
+target/
+pom.xml.tag
+pom.xml.releaseBackup
+pom.xml.versionsBackup
+pom.xml.next
+release.properties
+dependency-reduced-pom.xml
+buildNumber.properties
+.mvn/timing.properties
+### Java template
 *.class
 
 # Mobile Tools for Java (J2ME)
@@ -7,6 +19,10 @@
 *.jar
 *.war
 *.ear
+
+#Intellij IDEA files
+*.idea
+*.iml
 
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
